--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,10 @@ replay_pid*
 **/Data
 **/PlatformInfo
 **/WorkstationSettings
-**/README.md
-**/Accounts.Dynamic
-**/Settings.Dynamic
-**/Settings.Startup
+README.md
+Accounts.Dynamic
+Settings.Dynamic
+Settings.Startup
 
 #Exclude these folders for later set-up as Sub Modules
 **/Tags
